--- a/sling-shot-to-unlock/src/App.css
+++ b/sling-shot-to-unlock/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   position: relative;
   height: 100vh;
+  max-height: 100vh;
   border-collapse: collapse;
   width: 100vw;
 }
@@ -9,8 +10,8 @@
 
 .SlingShot {
   background-color: #282c34;
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
   position: absolute;
   bottom: 50%;
   left: 50%
@@ -30,4 +31,12 @@
   bottom: 10vh;
   height: 40vh;
   width: 100%;
+}
+
+.arrow-point{
+  background-color: green;
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  
 }
