--- a/sling-shot-to-unlock/src/App.css
+++ b/sling-shot-to-unlock/src/App.css
@@ -7,18 +7,17 @@
   width: 100vw;
 }
 
-
 .SlingShot {
   background-color: #282c34;
   width: 20px;
   height: 20px;
   position: absolute;
   bottom: 50%;
-  left: 50%
+  left: 50%;
 }
 
-.PlayZone_Content{
-  background-color:aqua;
+.PlayZone_Content {
+  background-color: aqua;
   position: relative;
   height: 100%;
   margin-left: 5vw;
@@ -33,19 +32,35 @@
   width: 100%;
 }
 
-.arrow-point{
+.arrow-point {
   background-color: green;
   position: absolute;
   width: 5px;
   height: 5px;
-  
 }
 
-.currentBird{
+.currentBird {
   position: absolute;
-  /* background-color: black; */
   margin-right: 200px;
   max-width: 100px;
   max-height: 100px;
   pointer-events: none;
+}
+
+.pig {
+  align-self: center;
+  justify-self: center;
+  position: absolute;
+  max-width: 200px;
+  max-height: 200px;
+  pointer-events: none;
+}
+
+.PigArea {
+  display: grid;
+  margin-right: 10%;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-template-areas: "pig pig pig pig";
+  padding-top: 5%;
 }
