--- a/sling-shot-to-unlock/src/App.css
+++ b/sling-shot-to-unlock/src/App.css
@@ -56,6 +56,15 @@
   pointer-events: none;
 }
 
+.popped{
+  opacity: 0;
+  transition: all 250ms linear 0s;
+}
+
+.spawn{
+  opacity: 1;
+  transition: all 250ms linear 0.5s;
+}
 .PigArea {
   display: grid;
   margin-right: 10%;
