--- a/sling-shot-to-unlock/src/App.css
+++ b/sling-shot-to-unlock/src/App.css
@@ -8,13 +8,35 @@
 }
 
 .SlingShot {
-  background-color: #282c34;
-  width: 20px;
-  height: 20px;
+  /* background-color: #282c34; */
+  width: 100px;
+  height: 100px;
   position: absolute;
   bottom: 50%;
   left: 50%;
+  /* pointer-events: none; */
 }
+
+.SlingShot  img{
+  /* background-color: gray; */
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  
+  left:0%;
+  pointer-events: none;
+  
+}
+
+/* .SlingShot2 {
+  background-color: gray;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  
+  left:0%;
+  pointer-events: none;
+} */
 
 .PlayZone_Content {
   background-color: aqua;
