--- a/sling-shot-to-unlock/src/App.css
+++ b/sling-shot-to-unlock/src/App.css
@@ -6,8 +6,11 @@
   border-collapse: collapse;
   width: 100vw;
   background-image: url("../src/Assets/Feild.jpg");
-  background-repeat: repeat-y;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
 }
+
 
 .SlingShot {
   /* background-color: #282c34; */
@@ -15,7 +18,7 @@
   height: 100px;
   position: absolute;
   bottom: 50%;
-  left: 40%;
+  left: 50%;
   /* pointer-events: none; */
 }
 
@@ -41,7 +44,6 @@
 
 .PlayZone_Content {
   position: relative;
-  background-color: hotpink;
   width: 50%;
   height: 100%;
   margin-left: 24vw;
@@ -71,9 +73,9 @@
 }
 
 .pig {
+  position: absolute;
   align-self: center;
   justify-self: center;
-  position: absolute;
   max-width: 200px;
   max-height: 200px;
   pointer-events: none;
@@ -120,8 +122,10 @@
 
 .Sandbag {
   position: relative;
-  z-index:1;
+  z-index:0;
   /* background-image: url("/Users/mohsinraza/Downloads/SlingShotToUnlock/CPSC581-Project2/SlingShotToUnlock/sling-shot-to-unlock/src/Assets/Sandbags.png"); */
-  max-width: 100px;
-  max-height: 100px;
+  max-width: 500px;
+  max-height: 500px;
+  pointer-events: none;
+  padding-top: 25%;
 }
