--- a/sling-shot-to-unlock/src/App.css
+++ b/sling-shot-to-unlock/src/App.css
@@ -124,5 +124,19 @@
   max-width: 500px;
   max-height: 500px;
   pointer-events: none;
-  padding-top: 25%;
+  padding-top: 40%;
+}
+
+.unlockscreen {
+  max-width: 100%;
+  max-height: 100%;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  overflow: auto;
+  position: fixed;
+  right: 0;
+  top: 0;
+  -o-object-fit: contain;
+  object-fit: contain;
 }
